<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="IO" Id="{f19c6e7d-dfbd-4478-b507-c13927482bf7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	// Heater outputs
	Q_HeaterT AT %Q*:BOOL;
	Q_HeaterB AT %Q*:BOOL;
	Q_VisionLight AT %Q*:BOOL;
	
	// RTD Sensors (PT100)
	I_TermT AT %I*:INT;
	I_TermB AT %I*:INT;
	
	// Valor temperatura puente de resistencias
	I_TermTPuente AT %I*:INT;
	I_TermBPuente AT %I*:INT;
	
	// Sensores mecanicos diametro
	I_SMec1 AT %I*:INT;
	I_SMec2 AT %I*:INT;
	
	//Ventiladores
	Q_Vent1 AT %Q*:INT;
	Q_Vent2 AT %Q*:INT;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>