<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="MC" Id="{65e0733b-c94a-4c09-adde-24ff96a614f2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Axis ref
	Extruder: AXIS_REF;
	Puller: AXIS_REF;
	PullerVirtual:AXIS_REF; //Eje virtual para controlar el Puller
	
	// Orders
	En_Power:BOOL;
	Exec_Stop:BOOL;
	Exec_Velocity:BOOL;
	Exec_Relative:BOOL;
	Exec_Reset:BOOL;
	
	Man_ForwardExtruder:BOOL;
	Man_BackwardsExtruder:BOOL;
	
	Man_ForwardPuller:BOOL;
	Man_BackwardsPuller:BOOL;
	
	// Motion variables
	Override:LREAL := 100;
	TargetVel:LREAL;
	TargetPosRel:LREAL;
	TargetDirection:MC_Direction;
	
	// Puller
	PullerVel:LREAL;
	Exec_VelocityPuller:BOOL;
	PullerDirection:MC_Direction;
	Acoplar:BOOL;
	Desacoplar:BOOL;
END_VAR

VAR_GLOBAL CONSTANT
	// Motion constants
	StdVel:LREAL:= 100;
	StdAcc:LREAL:= 1000;
	StdDecc:LREAL:= 1000;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>